--- a/MySqlBackupApp/MySqlBackupApp.csproj
+++ b/MySqlBackupApp/MySqlBackupApp.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="MySqlBackup.NET.MySqlConnector" Version="2.3.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
