--- a/MySqlBackupApp/MySqlBackupApp.csproj
+++ b/MySqlBackupApp/MySqlBackupApp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="log4net" Version="3.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
     <PackageReference Include="MySqlBackup.NET.MySqlConnector" Version="2.3.9" />
